# kontest

./: CMakeLists.txt  INSTALL.md  README-CMake.md  README.md
cmake/: find_llvm.cmake
idea/: modules.xml  workspace.xml
idea/inspectionProfiles/: Project_Default.xml
include/klee/: Constraints.h  ExecutionState.h  Expr.h  ExprBuilder.h  Interpreter.h  Solver.h  klee.h  kontest.h
include/kontest/: scenarios.h
lib/Core/: AddressSpace.cpp  AddressSpace.h  CMakeLists.txt  CallPathManager.cpp  ConcolicTest.cpp  ConcolicTest.h  Context.cpp  CoreStats.cpp  CoreStats.h  ExecutionState.cpp  Executor.cpp  Executor.h  ExecutorUtil.cpp  ExternalDispatcher.cpp  ImpliedValue.cpp  KontestBlock.cpp  KontestBlock.h  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  ScenarioHandler.cpp  ScenarioHandler.h  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h  StatsTracker.cpp  TimingSolver.cpp  TimingSolver.h
lib/Expr/: Constraints.cpp  Expr.cpp  ExprUtil.cpp  Parser.cpp
lib/Module/: CMakeLists.txt  Checks.cpp  InstructionInfoTable.cpp  InstructionOperandTypeCheckPass.cpp  IntrinsicCleaner.cpp  KModule.cpp  LowerSwitch.cpp  ModuleUtil.cpp  Optimize.cpp  Passes.h  RaiseAsm.cpp
lib/Solver/: IndependentSolver.cpp  QueryLoggingSolver.cpp  STPSolver.cpp  Solver.cpp
lib/Support/: CompressionStream.cpp  ErrorHandling.cpp  FileHandling.cpp  Timer.cpp
runtime/: CMakeLists.txt  Makefile  Makefile.cmake.bitcode  Makefile.cmake.bitcode.config.in  Makefile.cmake.bitcode.rules
runtime/Intrinsic/: CMakeLists.txt  Makefile.cmake.bitcode  klee_choice.c  klee_int.c  klee_range.c  memalign.c  memmove.c
runtime/Kontest/: CMakeLists.txt  Makefile  Makefile.cmake.bitcode  Scheduler.c  Scheduler.h  Utils.c  Utils.h
runtime/POSIX/: fd.c  fd_init.c  klee_init_env.c  misc.c
runtime/Runtest/: CMakeLists.txt  Makefile  intrinsics.c
runtime/klee-libc/: Makefile.cmake.bitcode
test/: CMakeLists.txt
test/Concrete/: ConcreteTest.py  ConstantInit.llvm37.ll  FloatingPointOps.ll
test/Dogfood/: ImmutableSet.cpp
test/Feature/: AliasFunction.c  AliasFunctionExit.c  BlockCoverage.c  CheckForImpliedValue.c.failing  ConstantArray.ll  ConstantArray.llvm37.ll  CopyOnWrite.c  DanglingConcreteReadExpr.c  DefineExternalObject.c  DivideByZeroConcrete.c  ExitOnDivergence.c  ExitOnErrorType.c  ExprLogging.c  InAndOutOfBounds.c  IntrinsicTrap.ll  IsSymbolic.c  KleeReportError.c  LinkLLVMLib.c  MakeSymbolicName.c  MaxTestInstructions.c  MultipleFreeResolution.c  MultipleReadResolution.c  MultipleWriteResolution.c  Optimize.c  OverlappedError.c  OvershiftCheck.c  ResolutionDivergence.c  RewriteEqualities.c  SetForking.c  SetForkingResolution.c  SilentKleeAssume.c  SourceMapping.c  StatesCoveringNew.c  StatesCoveringNew2.c  WarnOnConcretization.c  WithLibc.c  (+7 more)
(+88 files in other folders)
